--- a/portfolio/syntax.css
+++ b/portfolio/syntax.css
@@ -1,6 +1,8 @@
 #hearder{
-    position: middle;
+    position: absolute;
+    left: 90;
+    top : 0;
 }
 #header h1{
-    font-size: 32 px ;
+    font-size: 3295 px ;
 }
